# longshotel

./: README.md  pyproject.toml
src/longshotel/: __init__.py  cli.py  client.py  config.py  display.py  models.py  monitor.py  notifications.py
tests/: test_client.py  test_client_direct.py  test_models.py  test_monitor_features.py  test_notifications_new.py
